c/examples/writing-a-c-compiler-tests/tests/chapter_16/valid/strings_as_lvalues/empty_string.c
/* Test that we add a terminating null byte to the empty string */
int main(void) {
    char *empty = "";
    return empty[0];
}