c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/bitwise_operation_on_string.c
// Can't apply bitwise operations to strings
int main(void) {
    "My string" & 100;
    return 0;
}